; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-lua.c_lwan_lua_state_push_request.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-lua.c_lwan_lua_state_push_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_request = type { i32 }

@request_metatable_name = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lwan_lua_state_push_request(i32* %0, %struct.lwan_request* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.lwan_request*, align 8
  %5 = alloca %struct.lwan_request**, align 8
  store i32* %0, i32** %3, align 8
  store %struct.lwan_request* %1, %struct.lwan_request** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.lwan_request** @lua_newuserdata(i32* %6, i32 8)
  store %struct.lwan_request** %7, %struct.lwan_request*** %5, align 8
  %8 = load %struct.lwan_request*, %struct.lwan_request** %4, align 8
  %9 = load %struct.lwan_request**, %struct.lwan_request*** %5, align 8
  store %struct.lwan_request* %8, %struct.lwan_request** %9, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @request_metatable_name, align 4
  %12 = call i32 @luaL_getmetatable(i32* %10, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @lua_setmetatable(i32* %13, i32 -2)
  ret void
}

declare dso_local %struct.lwan_request** @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @luaL_getmetatable(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
